Fix word-wrap for all list widgets

--- a/assets/sass/components/_wp-widgets.scss
+++ b/assets/sass/components/_wp-widgets.scss
@@ -209,6 +209,7 @@
 		display: inline-block;
 		color: $gray;
 		font-weight: bold;
+		word-wrap: break-word;
 		padding: ptr(12) 0;
 
 		.footer & {
